--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,10 @@
 }
 
 :root{
-    --main-color: #2196f3;
-    --main-color-alt: #1787e0;
     --main-transition: 0.3s;
-    --main-padding-top: 80px;
+    --main-padding-top: 100px;
     --main-padding-bottom: 80px;
-    --section-background: #333;
+    --section-background: #292929;
 }
 
 html{
@@ -116,20 +114,16 @@ ul{
     box-shadow: 0px 0px 30px rgba(255, 255, 255, 0.25);
 }
 
-.videos .container .box .img{
-    
-}
-
 .videos .container .box .img a img{
     max-width: 100%;
-    border-radius: 5px;
+    border-radius: 0px 0px 5px 5px;
 }
 
 .videos .container .box h3{
     margin: 0;
     font-size: 18px;
     font-weight: 700;
-    color: var(--main-color);
+    color: rgb(0, 217, 255);
     text-align: center;
     background-color: #2e2e2e;
     box-shadow: 0px 0px 30px rgba(255, 255, 255, 0.15);
@@ -142,9 +136,9 @@ ul{
 /* Start Explore  */
 
 .explore{
-    padding-top: var(--main-padding-top);
+    padding-top: 20px;
     padding-bottom: var(--main-padding-bottom);
-    background-color: #333;
+    background-color: var(--section-background);
 }
 
 .explore .container{
@@ -159,7 +153,7 @@ ul{
     justify-content: center;
     flex-direction: column;
     gap: 25px;
-    background-color: #3e3e3e;
+    background-color: #2f2f2f;
     padding: 20px 30px;
     overflow: hidden;
     border-radius: 50px 0px;
@@ -168,24 +162,25 @@ ul{
 }
 
 .explore .container .box:hover{
-    box-shadow: 0px 0px 35px var(--clr);
+    box-shadow: 0px 0px 40px var(--clr);
+    transform: translateY(-5px);
 }
 
 .explore .container .box:hover img{
-    box-shadow: 0px -1px 0px 20px #3e3e3e , 0px 2px 0px 300px var(--clr);
+    box-shadow: 0px -1px 0px 20px #2f2f2f , 0px 2px 0px 300px var(--clr);
     border-radius: 50%;
 }
 
 .explore .container .box img{
     width: 70px;
-    box-shadow: 0px -1px 0px 20px #3e3e3e , 0px 2px 0px 20px var(--clr);
-    background-color: #3e3e3e;
+    box-shadow: 0px -1px 0px 20px #2f2f2f , 0px 2px 0px 20px var(--clr);
+    background-color: #2f2f2f;
     margin-top: 20px;
     transition: 0.58s;
 }
 
 .explore .container .box:hover h3{
-    color: #3e3e3e;
+    color: #2f2f2f;
 }
 
 .explore .container .box h3{
@@ -197,7 +192,7 @@ ul{
 }
 
 .explore .container .box:hover p{
-    color: #3e3e3e;
+    color: #2f2f2f;
 }
 
 .explore .container .box p{
@@ -211,8 +206,8 @@ ul{
 }
 
 .explore .container .box:hover a{
-    background-color: #3e3e3e;
-    color: var(--clr);
+    background-color: #2f2f2f;
+    color: #AAA;
 }
 
 .explore .container .box a{
@@ -221,10 +216,122 @@ ul{
     font-weight: 600;
     width: fit-content;
     padding: 12px 35px;
-    color: #3e3e3e;
+    color: #2f2f2f;
     background-color: var(--clr);
     border-radius: 20px 2px;
     transition: var(--main-transition);
 }
 
+.explore .container .box a:hover{
+    color: var(--clr);
+}
+
 /* End Explore  */
+
+/* Start Statistics */
+
+.st{
+    padding-top: var(--main-padding-top);
+    padding-bottom: var(--main-padding-bottom);
+}
+
+.st .container{
+    display: grid;
+    grid-template-columns: repeat( auto-fill , minmax( 300px , 1fr ) );
+    gap: 40px;
+}
+
+.st .container .box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 20px;
+    background-color: #2e2e2e;
+    padding: 20px 25px;
+    border-radius: 40px 0px;
+    transition: var(--main-transition);
+    box-shadow: 0px 0px 10px var(--clr);
+}
+
+.st .container .box:hover{
+    transform: translateY(-10px);
+    box-shadow: 0px 0px 30px var(--clr);
+}
+
+.st .container .box .prog{
+    position: relative;
+    width: 150px;
+    height: 150px;
+}
+
+.st .container .box .prog svg{
+    position: relative;
+    width: 150px;
+    height: 150px;
+    /* box-shadow: 0px 0px 20px var(--clr);
+    border-radius: 50%; */
+}
+
+.st .container .box .prog svg circle{
+    width: 150px;
+    height: 150px;
+    fill: none;
+    transform: translate(5px,5px);
+    stroke: #000;
+    stroke-width: 10;
+    stroke-dasharray: 440;
+    stroke-dashoffset: 440;
+    stroke-linecap: round;
+}
+
+.st .container .box .prog svg circle:nth-child(1){
+    stroke-dashoffset: 0;
+    stroke: #999;
+}
+
+.st .container .box .prog svg circle:nth-child(2){
+    stroke-dashoffset: calc(440 - (440 * var(--per) ) / 100 );
+    stroke: var(--clr);
+}
+
+.st .container .box .prog .number{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #EEE;
+}
+
+.st .container .box .prog .number h3{
+    font-size: 32px;
+    
+}
+
+.st .container .box > h3{
+    font-size: 28px;
+    margin: 0;
+    margin-top: 5px;
+    color: var(--clr);
+}
+
+.st .container .box h4{
+    font-size: 20px;
+    margin: 0;
+    color: #AAA;
+}
+
+.st .container .box p{
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 1.5;
+    color: orange;
+    margin: 0;
+    margin-bottom: 5px;
+}
+
+/* End Statistics */
